--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -20,8 +20,6 @@
         <packages.list>net.bytebuddy.agent</packages.list>
         <native.compiler.32>i686-w64-mingw32-gcc</native.compiler.32>
         <native.compiler.64>x86_64-w64-mingw32-gcc</native.compiler.64>
-        <native.home>${java.home}/..</native.home>
-        <native.name>net_bytebuddy_agent_VirtualMachine_ForHotSpot_Connection_ForJnaWindowsNamedPipe</native.name>
     </properties>
 
     <name>Byte Buddy Java agent</name>
@@ -177,14 +175,10 @@
                                 <configuration>
                                     <executable>${native.compiler.32}</executable>
                                     <arguments>
-                                        <argument>-I</argument>
-                                        <argument>${native.home}/include</argument>
-                                        <argument>-I</argument>
-                                        <argument>${native.home}/include/win32</argument>
                                         <argument>-shared</argument>
                                         <argument>-o</argument>
                                         <argument>${project.basedir}/src/main/resources/attach_hotspot_windows_32.dll</argument>
-                                        <argument>${project.basedir}/src/main/c/${native.name}.c</argument>
+                                        <argument>${project.basedir}/src/main/c/attach_hotspot_windows.c</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
@@ -197,14 +191,10 @@
                                 <configuration>
                                     <executable>${native.compiler.64}</executable>
                                     <arguments>
-                                        <argument>-I</argument>
-                                        <argument>${native.home}/include</argument>
-                                        <argument>-I</argument>
-                                        <argument>${native.home}/include/win32</argument>
                                         <argument>-shared</argument>
                                         <argument>-o</argument>
                                         <argument>${project.basedir}/src/main/resources/attach_hotspot_windows_64.dll</argument>
-                                        <argument>${project.basedir}/src/main/c/${native.name}.c</argument>
+                                        <argument>${project.basedir}/src/main/c/attach_hotspot_windows.c</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
