--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>byte-buddy-parent</artifactId>
         <groupId>net.bytebuddy</groupId>
-        <version>1.9.15</version>
+        <version>1.9.16-SNAPSHOT</version>
     </parent>
 
     <artifactId>byte-buddy-agent</artifactId>
