--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,7 @@
                     <includes>
                         <include>**/main/java/**/*.java</include>
                         <include>**/precompiled/java/**/*.java</include>
+                        <include>**/main/c/**/*.c</include>
                     </includes>
                     <strictCheck>true</strictCheck>
                     <mapping>
