--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -21,8 +21,8 @@
         <native.compiler.64>x86_64-w64-mingw32-gcc</native.compiler.64>
     </properties>
 
-    <name>Byte Buddy Java agent</name>
-    <description>The Byte Buddy Java agent allows to access the JVM's HotSwap feature.</description>
+    <name>Byte Buddy agent</name>
+    <description>The Byte Buddy agent offers convenience for attaching an agent to the local or a remote VM.</description>
 
     <!--
       The JNA dependency can be excluded safely. Byte Buddy will safely discover the
@@ -75,6 +75,20 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>..</directory>
+                <targetPath>META-INF</targetPath>
+                <filtering>true</filtering>
+                <includes>
+                    <include>LICENSE</include>
+                    <include>NOTICE</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <!-- Create manifest file which is required for creating an OSGi bundle. -->
             <plugin>
