--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,13 @@
         <module>byte-buddy-benchmark</module>
         <module>byte-buddy-agent</module>
         <module>byte-buddy-android</module>
+        <module>byte-buddy-android-test</module>
         <module>byte-buddy-maven-plugin</module>
         <module>byte-buddy-gradle-plugin</module>
     </modules>
 
     <properties>
+        <copyright.holder>Rafael Winterhalter</copyright.holder>
         <bytebuddy.extras>false</bytebuddy.extras>
         <bytebuddy.integration>false</bytebuddy.integration>
         <bytebuddy.experimental>false</bytebuddy.experimental>
@@ -57,7 +59,7 @@
         <bytecode.main.version>1.5</bytecode.main.version>
         <bytecode.test.version>1.6</bytecode.test.version>
         <pitest.target>net.bytebuddy</pitest.target>
-        <asm.javadoc>http://asm.ow2.io/javadoc</asm.javadoc>
+        <asm.url>https://asm.ow2.io</asm.url>
         <version.asm>7.1</version.asm>
         <version.junit>4.12</version.junit>
         <version.mockito>2.23.0</version.mockito>
@@ -68,7 +70,7 @@
         <version.plugin.deploy>2.8.2</version.plugin.deploy>
         <version.plugin.javadoc>2.10.4</version.plugin.javadoc>
         <version.plugin.source>3.0.1</version.plugin.source>
-        <version.plugin.shade>3.2.0</version.plugin.shade>
+        <version.plugin.shade>3.2.1</version.plugin.shade>
         <version.plugin.gpg>1.6</version.plugin.gpg>
         <version.plugin.jxr>2.5</version.plugin.jxr>
         <version.plugin.buildhelp>1.12</version.plugin.buildhelp>
@@ -255,7 +257,7 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <properties>
                         <current.year>${current.year}</current.year>
-                        <copyright.holder>Rafael Winterhalter</copyright.holder>
+                        <copyright.holder>${copyright.holder}</copyright.holder>
                     </properties>
                     <includes>
                         <include>**/main/java/**/*.java</include>
@@ -393,6 +395,8 @@
                 <version.plugin.plugin>3.5.2</version.plugin.plugin>
                 <version.plugin.shade>3.1.1</version.plugin.shade>
                 <version.plugin.surefire>2.22.1</version.plugin.surefire>
+                <version.maven.android>3.8.2</version.maven.android>
+                <android.maven.group>com.jayway.maven.plugins.android.generation2</android.maven.group>
                 <spotbugs.skip>true</spotbugs.skip>
             </properties>
         </profile>
@@ -655,7 +659,7 @@
                         <configuration>
                             <detectJavaApiLink>true</detectJavaApiLink>
                             <links>
-                                <link>${asm.javadoc}</link>
+                                <link>${asm.url}/javadoc</link>
                             </links>
                         </configuration>
                     </plugin>
@@ -711,6 +715,7 @@
                                     <consoleOutput>true</consoleOutput>
                                     <failsOnError>true</failsOnError>
                                     <excludes>**/generated/**/*</excludes>
+                                    <includeResources>false</includeResources>
                                 </configuration>
                             </execution>
                         </executions>
@@ -802,21 +807,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <!-- Only build the Android test application on demand as it requires Android SDK installation. -->
-        <profile>
-            <id>android</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <modules>
-                <module>byte-buddy</module>
-                <module>byte-buddy-dep</module>
-                <module>byte-buddy-benchmark</module>
-                <module>byte-buddy-agent</module>
-                <module>byte-buddy-android</module>
-                <module>byte-buddy-android-test</module>
-            </modules>
         </profile>
     </profiles>
 
