Move profile-dependant properties to root POM.

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,8 @@
         <version.plugin.license>3.0</version.plugin.license>
         <version.android.sdk>4.1.1.4</version.android.sdk>
         <version.utility.findbugs>3.0.1</version.utility.findbugs>
+        <version.maven.android>4.6.0</version.maven.android>
+        <android.maven.group>com.simpligility.maven.plugins</android.maven.group>
         <spotbugs.skip>false</spotbugs.skip>
         <jacoco.skip>false</jacoco.skip>
     </properties>
