Do not build Java 13 byte code level with Gradle.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
     - env: TARGET='-Pjava12' EXPERIMENTAL='false' EXCLUDE=''
       jdk: openjdk12
     # OpenJDK - Java 13
-    - env: TARGET='-Pjava13' EXPERIMENTAL='false' EXCLUDE=''
+    - env: TARGET='-Pjava13' EXPERIMENTAL='false' EXCLUDE='-pl ''!byte-buddy-gradle-plugin'''
       jdk: openjdk13
     # OpenJDK - Java 14
     - env: TARGET='-Pjava13' EXPERIMENTAL='true' EXCLUDE='-pl ''!byte-buddy-gradle-plugin'''
