--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.bytebuddy</groupId>
     <artifactId>byte-buddy-parent</artifactId>
-    <version>1.10.2</version>
+    <version>1.10.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2014</inceptionYear>
@@ -128,7 +128,7 @@
         <connection>scm:git:git@github.com:raphw/byte-buddy.git</connection>
         <developerConnection>scm:git:git@github.com:raphw/byte-buddy.git</developerConnection>
         <url>git@github.com:raphw/byte-buddy.git</url>
-        <tag>byte-buddy-1.10.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
