--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, macOS-10.14]
-        java: [8, 11, 13]
+        java: [8, 11, 13, 14]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
@@ -27,8 +27,8 @@ jobs:
         java-version: ${{ matrix.java }}
         architecture: x64
     - name: Build project
-      run: ./mvnw install -Dnet.bytebuddy.test.ci=true
+      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pjava${{ matrix.version}}
       if: matrix.java < 13
     - name: Build project (without Gradle)
-      run: ./mvnw install -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pjava${{ matrix.version}} -pl !byte-buddy-gradle-plugin
       if: matrix.java > 12
