--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
         java-version: ${{ matrix.java }}
         architecture: x64
     - name: Build project
-      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pjava${{ matrix.version}}
+      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pjava${{ matrix.java }}
       if: matrix.java < 13
     - name: Build project (without Gradle)
-      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pjava${{ matrix.version}} -pl !byte-buddy-gradle-plugin
+      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
       if: matrix.java > 12
