--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, macOS-10.14]
-        java: [8, 11, 13, 14]
+        java: [8, 11, 13]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
