--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     name: Test major versions
     strategy:
       matrix:
-        os: [ubuntu-18.04, macOS-10.14]
+        os: [ubuntu-18.04, macOS-10.14, windows-2019]
         java: [8, 11, 13]
     runs-on: ${{ matrix.os }}
     steps:
