--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,26 @@ jobs:
           fetch-depth: 1
       - name: Install JDK
         run: . .ci/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
+      - name: Build project
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true
+        if: matrix.java < 13
       - name: Build project (without Gradle)
         run: ./mvnw verify -Pintegration -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+        if: matrix.java > 12
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-18.04
+    needs: [hotspot-ea, hotspot-supported, hotspot-unsupported, openj9-supported]
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          architecture: x64
+      - name: Build project
+        run: ./mvnw jacoco:prepare-agent verify jacoco:report -Pintegration -Dnet.bytebuddy.test.ci=true
+      - uses: coverallsapp/github-action@v1
+        with:
+          github-token: ${{ secrets.github_token }}
