Reduce amount of integration work.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install JDK
         run: . .ci/install-jdk.sh --feature ea --os linux-x64
       - name: Build project (without Gradle)
-        run: ./mvnw verify -Pintegration -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
   hotspot-supported:
     name: HotSpot (supported)
     strategy:
@@ -41,7 +41,7 @@ jobs:
       run: ./mvnw verify -Dnet.bytebuddy.test.ci=true
       if: matrix.java < 13
     - name: Build project (without Gradle)
-      run: ./mvnw verify -Pintegration -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+      run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
       if: matrix.java > 12
   hotspot-unsupported:
     name: HotSpot (unsupported)
@@ -58,7 +58,7 @@ jobs:
           java-version: ${{ matrix.java }}
           architecture: x64
       - name: Build project
-        run: ./mvnw verify -Pintegration -Dnet.bytebuddy.test.ci=true
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true
   openj9-supported:
     name: OpenJ9 (supported)
     strategy:
@@ -75,7 +75,7 @@ jobs:
         run: ./mvnw verify -Dnet.bytebuddy.test.ci=true
         if: matrix.java < 13
       - name: Build project (without Gradle)
-        run: ./mvnw verify -Pintegration -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
         if: matrix.java > 12
   coverage:
     name: Coverage
