--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
           fetch-depth: 1
       - name: Install JDK
         run: |
-          sudo add-apt-repository ppa:webupd8team/java
-          sudo apt-get update
-          sudo apt-get install oracle-java6-installer
+          wget https://cdn.azul.com/zulu/bin/zulu6.22.0.3-jdk6.0.119-linux_amd64.deb
+          sudo dpkg -i zulu6.22.0.3-jdk6.0.119-linux_amd64.deb
       - name: Build project
         run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration
