--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Install JDK
-        run: |
-          wget https://cdn.azul.com/zulu/bin/zulu6.22.0.3-jdk6.0.119-linux_amd64.deb
-          sudo dpkg -i zulu6.22.0.3-jdk6.0.119-linux_amd64.deb
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.6
+          architecture: x64
       - name: Build project
         run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration
