--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           java-version: 1.6
           architecture: x64
       - name: Build project
-        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -s nossl.settings.xml
