--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,33 @@ on:
     - cron: "0 0 * * 1"
 
 jobs:
+  hotspot-ea:
+    name: HotSpot (EA)
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Install JDK and build project (without Gradle)
+        run: |
+          . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
+          ./mvnw verify -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+  hotspot-unsupported:
+    name: HotSpot (unsupported)
+    strategy:
+      matrix:
+        java: [7, 9, 10, 12]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+          architecture: x64
+      - name: Build project
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
   hotspot-legacy:
     name: HotSpot (legacy)
     runs-on: ubuntu-18.04
@@ -23,4 +50,4 @@ jobs:
           java-version: 1.6
           architecture: x64
       - name: Build project
-        run: ./mvnw -s nossl.settings.xml verify -Dnet.bytebuddy.test.ci=true -Pintegration
+        run: ./mvnw -s nossl.settings.xml verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava6 -pl !byte-buddy-gradle-plugin
